--- a/EduardD_Works/index.html
+++ b/EduardD_Works/index.html
@@ -21,51 +21,51 @@
                 </tr>
                 <tr>
                     <td align="center" width="50">03</td>
-                    <td align="left" width="200">Prima pagina HTML</td>
-                    <td align="left" width="400"><a href="/01_HTML/1-0_Theory_First-page.html">1-0_Theory_First-page.html</a></td>
+                    <td align="left" width="200">Analiza temei pe acasa</td>
+                    <td align="left" width="400"><a href="01_HTML/0-0_StartLessons_0-5/2_1_Discussion_page.html">2_1_Discussion_page</a></td>
                 </tr>
                 <tr>
                     <td align="center" width="50">04</td>
                     <td align="left" width="200">Prima pagina HTML</td>
-                    <td align="left" width="400"><a href="/01_HTML/1-0_Theory_First-page.html">1-0_Theory_First-page.html</a></td>
+                    <td align="left" width="400"><a href="01_HTML/1-0_Theory_First-page.html">1-0_Theory_First-page.html</a></td>
                 </tr>
                 <tr>
                     <td align="center" width="50">05</td>
                     <td align="left" width="200">Prima pagina HTML</td>
-                    <td align="left" width="400"><a href="/01_HTML/1-0_Theory_First-page.html">1-0_Theory_First-page.html</a></td>
+                    <td align="left" width="400"><a href="01_HTML/1-0_Theory_First-page.html">1-0_Theory_First-page.html</a></td>
                 </tr>
                 <tr>
                     <td align="center" width="50">06</td>
                     <td align="left" width="200">Prima pagina HTML</td>
-                    <td align="left" width="400"><a href="/01_HTML/1-0_Theory_First-page.html">1-0_Theory_First-page.html</a></td>
+                    <td align="left" width="400"><a href="01_HTML/1-0_Theory_First-page.html">1-0_Theory_First-page.html</a></td>
                 </tr>
                 <tr>
                     <td align="center" width="50">07</td>
                     <td align="left" width="200">Prima pagina HTML</td>
-                    <td align="left" width="400"><a href="/01_HTML/1-0_Theory_First-page.html">1-0_Theory_First-page.html</a></td>
+                    <td align="left" width="400"><a href="01_HTML/1-0_Theory_First-page.html">1-0_Theory_First-page.html</a></td>
                 </tr>
                 <tr>
                     <td align="center" width="50">08</td>
                     <td align="left" width="200">Prima pagina HTML</td>
-                    <td align="left" width="400"><a href="/01_HTML/1-0_Theory_First-page.html">1-0_Theory_First-page.html</a></td>
+                    <td align="left" width="400"><a href="01_HTML/1-0_Theory_First-page.html">1-0_Theory_First-page.html</a></td>
                 </tr>
                 <tr>
                     <td align="center" width="50">09</td>
                     <td align="left" width="200">Prima pagina HTML</td>
-                    <td align="left" width="400"><a href="/01_HTML/1-0_Theory_First-page.html">1-0_Theory_First-page.html</a></td>
+                    <td align="left" width="400"><a href="01_HTML/1-0_Theory_First-page.html">1-0_Theory_First-page.html</a></td>
                 </tr>
 
             </table>
             <ul>
-                <li>Prima pagina HTML <a href="/01_HTML/1-0_Theory_First-page.html">1-0_Theory_First-page.html</a></li>
-                <li>Elements & Tags <a href="/01_HTML/2_0_Theory_Element-Tags.html">2_0_Theory_Element-Tags</a>2_0_Theory_Element-Tags.html</li>
-                <li>Analiza temei pe acasa <a href="/01_HTML/2_1_Discussion_page.html">2_1_Discussion_page</a></li>
-                <li>Album Winter<a href="/01_HTML/3_0_Theory_Album-Winter.html">3_0_Theory_album</a></li>
-                <li>HTML inline Elements<a href="/01_HTML/4_0_Theory_Inline-Avataar.html"> Avatar</a></li>
-                <li>HTML inline Elements - HomeWork <a href="/01_HTML/4_1_HW_Inline-AListOfAvataars.html"> Contact List</a></li>
-                <li>HTML Inline-Buttons <a href="/01_HTML/4_0_Theory_Inline-Buttons_Player.html"> PLAYER</a></li>
-                <li>HTML Tables <a href="/01_HTML/7_0_Theory_Table-Profile.html"> Example of HTML Table</a></li>
-                <li>HTML Tables <a href="/01_HTML/7_1_HW_TABLE_Stairs.html"/a>Table Stairs</li>
+                <li>Prima pagina HTML <a href="01_HTML/1-0_Theory_First-page.html">1-0_Theory_First-page.html</a></li>
+                <li>Elements & Tags <a href="01_HTML/2_0_Theory_Element-Tags.html">2_0_Theory_Element-Tags</a>2_0_Theory_Element-Tags.html</li>
+                <li>Analiza temei pe acasa <a href="01_HTML/2_1_Discussion_page.html">2_1_Discussion_page</a></li>
+                <li>Album Winter<a href="01_HTML/3_0_Theory_Album-Winter.html">3_0_Theory_album</a></li>
+                <li>HTML inline Elements<a href="01_HTML/4_0_Theory_Inline-Avataar.html"> Avatar</a></li>
+                <li>HTML inline Elements - HomeWork <a href="01_HTML/4_1_HW_Inline-AListOfAvataars.html"> Contact List</a></li>
+                <li>HTML Inline-Buttons <a href="01_HTML/4_0_Theory_Inline-Buttons_Player.html"> PLAYER</a></li>
+                <li>HTML Tables <a href="01_HTML/7_0_Theory_Table-Profile.html"> Example of HTML Table</a></li>
+                <li>HTML Tables <a href="01_HTML/7_1_HW_TABLE_Stairs.html">Table Stairs</li>
                 <li>HTML Tables Album Multipage <a href="/01_HTML/8_0_Album-Multipage/8_0_Theory_Album-Multipage1.html"> Multipage Album</a></li>
             </ul>
         </p>
